Astro/astro-tests/testData/codeInsight/inspections/missingComponentImport.astro
<div>
  { 123 + <<error descr="Component Component is not imported">Co<caret>mponent</error>></> }
</div>